  * add support for decoding On2 VP5 and VP6 using Windows dlls
  * fix bugs with the colorkey overlay support introduced in rc4. under certain
    circunstances, parts of the images were not shown.
  * enable colorkey overlays for more cards using XVideo and vidix drivers.
  * make it possible for the CDDA plugin to give away Musicbrainz CD Index ID
  * several DVB improvements. add dvbs://, dvbc:// and dvbt:// mrls 

xine-lib (1-rc4)
  * experimental DTS software decoder using libdts
  * SPU decoder: timestamp handling for NAV packets fixes the menu on the first
    DVD of "24" season 1
  * improved precision in metronom's audio timestamp calculation fixes some
    sync problems, especially in long-running applications
  * fix playing mpeg vob files with LPCM
  * correct field order when deinterlacing bottom-field-first streams
  * fix network cdda playback
  * fix channel swapping in wave demuxer (lpcm)
  * colorkey support for drawing OSD (XVideo only - fix some flickering)
  * avoid possible segfaults in cdda
  * libvcd updated to 0.7.20
  * libcdio updated to 0.68
  * libmad updated to 0.15.1b
  * build improvements - different source and build directory, translations
  * avoid deadlock with raw AC3 streams and visualization
  * fix 24 bpp RGB output - may affect some users of xshm and fb
  * generate events for "Permission denied" and "File not found" in the
    http and file plugins
  * DXR3: fix menu highlight areas in letterboxed overlay mode with 
    pan&scan content
  * DXR3: fix libavcodec encoder for frame widths not a multiple of 16
  * mediaLib now used for bilinear scaling
  * video_out_pgx32: properly clips video output
  * video_out_pgx64: fixed displaying frames out of order when multi-buffering,
    automatically manages overlay mode based on degree of occlusion.
  * DXR3: option to use Pan & Scan information embedded in MPEG and DVB streams
  * disable AUD content detection because of false positives